--- a/styles.css
+++ b/styles.css
@@ -240,9 +240,11 @@ nav{
     animation: imgFloat 7s ease-in-out infinite;
 }
 .image img{
-    width: 380px;
-    height: 380px;
-    object-fit: contain;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 50% 0%;
 }
 @keyframes imgFloat {
     50%{
@@ -533,8 +535,8 @@ footer{
         padding: 0;
     }
     .image, .image img{
-        width: 320px;
-        height: 320px;
+        width: 340px;
+        height: 340px;
     }
 }
 
@@ -591,9 +593,8 @@ footer{
         margin-top: 65px;
     }
     .image, .image img{
-        width: 150px;
-        height: 150px;
-        /* border-radius: 75px; */
+        width: 170px;
+        height: 170px;
         /* top: 50%;
         left: 70%; */
         /* transform: translate(-50%, -50%); */
